# docs/swagger.json
@@ -8,24 +8,28 @@
             "put": {
                 "description": "update",
                 "consumes": [
-                    "application/json"
+                    "multipart/form-data"
                 ],
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "测试4"
+                    "测试"
                 ],
                 "summary": "更新用户信息",
                 "parameters": [
                     {
-                        "description": "用户更新后信息",
-                        "name": "Object",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/viewmodels.UploadPhoneExcelReq"
-                        }
+                        "type": "file",
+                        "description": "要上传的 Excel 文件",
+                        "name": "file",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "用户 ID",
+                        "name": "user_id",
+                        "in": "formData"
                     }
                 ],
                 "responses": {
@@ -51,17 +55,6 @@
                 },
                 "status": {
                     "type": "integer"
-                }
-            }
-        },
-        "viewmodels.UploadPhoneExcelReq": {
-            "type": "object",
-            "properties": {
-                "filePath": {
-                    "type": "string"
-                },
-                "userId": {
-                    "type": "string"
                 }
             }
         },
